<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/homeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="comp3350.jaunt.presentation.ActivityHome" >

    <TextView
        android:id="@+id/jauntTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="clip_horizontal"
        android:text="@string/jauntTitle"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="60sp"
        android:typeface="monospace" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:orientation="vertical" >

        <Button
            android:id="@+id/buttonNewGame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onNewGameClick"
            android:text="@string/new_game"
            android:textStyle="bold"
            android:typeface="monospace" />

        <Button
            android:id="@+id/buttonContinueGame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="30dp"
            android:onClick="onContinueClick"
            android:text="@string/continue_game"
            android:textStyle="bold"
            android:typeface="monospace" />

        <Button
            android:id="@+id/buttonOptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:onClick="onSettingsClick"
            android:text="@string/game_settings"
            android:textStyle="bold"
            android:typeface="monospace" />

        <Button
            android:id="@+id/buttonGlossary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onGlossaryClick"
            android:text="@string/glossary"
            android:textStyle="bold"
            android:typeface="monospace" />
    </LinearLayout>

    <TextView
        android:id="@+id/Music"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_alignStart="@+id/linearLayout1"
        android:layout_below="@+id/jauntTitle"
        android:gravity="center_horizontal"
        android:text="@string/welcome_msg"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="monospace" />

</RelativeLayout>