<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="100"
    tools:context="comp3350.jaunt.presentation.ActivityLoad" >

    <ScrollView
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="95"
	    android:layout_marginBottom="50dp" >
	    
        <TextView
        android:id="@+id/historyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/historyText"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="monospace" />
        
   	</ScrollView>
    
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
        <Button
            android:id="@+id/btnReturn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:onClick="onReturnClick"
            android:text="@string/returnHome"
        	android:textStyle="bold"
        	android:typeface="monospace" />
        
        <Button
            android:id="@+id/btnRestart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/restart"
            android:onClick="onRestartClick"
        	android:textStyle="bold"
        	android:typeface="monospace" />
        
    </LinearLayout>

</LinearLayout>