<?xml version="1.0" encoding="utf-8"?>
<FrameLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="comp3350.jaunt.presentation.ActivityGlossary" >

    <ScrollView
        android:id="@+id/unclickedLayout"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:visibility="visible"
        android:clickable="true" >
        
        <LinearLayout
	        android:id="@+id/ids"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:padding="5dp"
	        android:orientation="vertical" >
	        
	    </LinearLayout>
        
    </ScrollView>
    
    <RelativeLayout
        android:id="@+id/clickedLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:visibility="invisible"
        android:clickable="false"
        android:weightSum="100" >
        
        <TextView
            android:id="@+id/editTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="10dp"
            android:textSize="20sp"
            android:text="@string/storyTitle"
            android:textStyle="bold"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/editTitle"
            android:textSize="20sp"
            android:text="@string/storyText"
            android:textStyle="bold"
            android:typeface="monospace" />

        <LinearLayout
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal" >

            <Button
	            android:id="@+id/btnDone"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:onClick="onDoneClick"
	            android:text="@string/back"
            	android:textStyle="bold"
            	android:typeface="monospace" />
            
        </LinearLayout>
    </RelativeLayout>

</FrameLayout>